 - fix random WaitingDamage memory corruption
 - fix Light::ClearDeathDependencies memory corruption
 - fix CollisionHander::MouseHit not taking relMidPos translation into account
 - fix LosHandler::UnitLoaded removing LOS from non-stunned units
 - fix calling alSourcePlay even if alSourceQueueBuffers produced an error
 - fix CheckEnlargeDrawArray for VA_TYPE's larger than 10 floats
 - do not bitshift negative values (undefined behavior)
 - catch invalid CmdDesc indices in GuiHandler::DrawButtons
 - insert missing eventHandler.RemoveClient call in RoamMeshDrawer

 - fix #5630 (free line-of-fire detection failure)
 - fix #5287 (help units in firebases with a collideFireBase weapondef flag)
 - fix #2970 ("pushResistant" is now accepted by MoveCtrl.SetGroundMoveTypeData)
 - fix #3515 (better error-messages for the /team command)
 - fix #5200 (broken ctrl+mousewheel tilt transitions with 'Spring' camera)
 - fix #5258 (custom selection volumes)
 - fix #5632 (show a slightly more interesting black screen on startup)
 - fix #5629 (make footprint-terraforming respect buildee's actual facing)
 - fix #4447 (FPS-mode locking onto out-of-LOS units)
 - fix #4074 (equalize UnitDamaged parameters for LuaUI and LuaRules)
 - fix #2855 #5092 #5180 (jagged terrain shadows)
 - fix #5619 (area-commands not drawn on minimap)
 - fix #5617 (enable non-binary alpha-testing for unit icons)
 - fix #4164 (shield{Good,Bad}Color are RGBA float4's now)
 - fix #5587 (units in sharp holes sinking underground)
 - fix #4723 (EmitSfx crash when referencing effect not defined in unitdef)
 - fix #4940 ("Recompressing Map Tiles with ETC1" load-stage triggering watchdog)
 - fix #5403 (extra ShieldPreDamaged parameters)
 - fix #5056 (let Spring.GetUnitWeaponHaveFreeLineOfFire take firing location as an argument)
 - fix #5188 (units refusing to move if ordered to non-reachable locations from factory)
 - fix #5639 (stunned transports not updating the position of their cargo)